--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,3 +1,3 @@
-variable2=Desarrollo-Producción
+variable2=Desarrollo-Producción_1.0.1
 variable4=Solo para desarrollo
 variable5=Mck para los tests
