--- a/app2/application-dev.properties
+++ b/app2/application-dev.properties
@@ -1,3 +1,3 @@
-variable2=Desarrollo-Producción_1.0.2
-variable4=Solo para desarrollo
-variable5=Mck para los tests
+variable2=Desarrollo-Producción_1.0.2APP2
+variable4=Solo para desarrolloAPP2
+variable5=Mck para los testsAPP2
